# Rust-API-analysis

./: .gitignore  Cargo.toml  LICENSE  README.md  fns_log  parser  pom.xml
scripts/: auto-comment.py  setup.sh
src/: JavaAPI.java  cAPI.c  cli.py  cppAPI.cpp  javascriptAPI.js  main.rs  parser  pythonAPI.py  rustAPI  rustAPI.rs  test_utils.rs  toRead.txt  tui.py
tests/: test_c.rs  test_cpp.rs  test_java.rs  test_javascript.rs  test_python.rs  test_rust.rs  test_utils.rs
